--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -1,13 +1,17 @@
 name: Go Build
 
 on:
+  workflow_dispatch:
+  
   push:
+  
   pull_request:
 
 jobs:
 
-  build:
+  Go Build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
 
