--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,11 +14,13 @@ name: "CodeQL"
 on:
   push:
     branches: [ "main" ]
+    
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  schedule:
-    - cron: '16 18 * * 4'
+
+  # schedule:
+  #   - cron: '16 18 * * 4'
 
 jobs:
   Analyze:
